--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -19,6 +19,7 @@
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240973.md#1" target="_blank">家长帮助青少年备考的5种方法</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240973.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241368-Fotolia_181153601_Subscription_L-150x120.jpg" align ="left"></a>准备考试可能会让人感到压力重重，这不仅对于青少年，而且对每个家庭成员都是如此。为了有助于创造一个积极的环境，您可以通过一些实用的方法来帮助孩子准备考试，并在最大程度上减少家庭成员中的紧张关系。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 5:37 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13241180.md#1" target="_blank">困知勉行—徐明义画集8—草原放歌（彩墨）</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13241180.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/09/id13241198-214c80a0de39e0cae599992bbe831391-150x120.jpg" align ="left"></a>我读钱松喦先生的书，里面提到他好用“单色”，说“山水画，罗列的形象比较复杂，着色却要单纯。”这幅“草原放歌图”就是纯用绿色，在做渐层的处理时，挥洒泼色泼墨的当下，常能得到很大的快慰与满足。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 4:40 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13228257.md#1" target="_blank">暗战赤龙（56）惊天爆炸</a><br></h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/12/n13228257.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/07/id13074103-3581e100e7645b217fe3ddcaf4e33ab4-150x120.jpg" align ="left"></a>“其实我们在西部战区和印度的陆军力量对比半斤对八两，谁也不占优势。但目前战争关键的是空军力量的对比。”杨元简短道来。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 3:00 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/20/n13247971.md#1" target="_blank">五律：中秋满月旭日同辉感怀</a><br></h3> 日月东西对 同圆有几时 天睁一双眼 山簇万条眉......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 11:50 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245180.md#1" target="_blank">歌词：大月中秋（四叠）</a><br></h3>大月高风寄我思， 中秋队雁唱新词。 师恩天地人神度， 法泽乾坤世界滋！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:21 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245179.md#1" target="_blank">五绝：上天坡（外一首）</a><br></h3>路远时光少， 山高坎坷多。 修佛无小事， 不懈上天坡！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:10 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/19/n13245319.md#1" target="_blank">一七令?钟</a><br></h3>钟。 暮鼓，晨钟。 禅中坐，坐如钟。 经卷诵读，声似洪钟。 时光飞速快，珍惜每分钟。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月20日 12:02 AM			</td></tr>
@@ -29,7 +30,5 @@
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242157.md#1" target="_blank">秋光</a><br></h3> 天朗风柔暑气消， 秋光骀荡适登高。 青纱海漫淹村落， 红果星繁缀九皋。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 12:20 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242015.md#1" target="_blank">五律：晨雨</a><br></h3> 天末凉风起， 阴云一夜行。 雨声惊梦醒， 雾霭阻天明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月18日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13242153.md#1" target="_blank">诗歌：望月思家园</a><br></h3>中秋望月思家园， 可恨赤龙国门关。 不知亲友可安好？ 天灭中共即团圆！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 11:54 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/21/9/17/n13240365.md#1" target="_blank">松街的故事之四：父亲在达拉斯的那三个月</a><br></h3>父亲是1991年11月来美的，原先的计划本是要与母亲同住在松街的老人公寓中，但母亲当时住在四楼的一间Efficiency的单位中，除了浴室之外，就是一间不到两百平方英尺的一大间，厨房、客厅与卧房，全都包括在内，是老人公寓里的“单身宿舍”，其大小相当于一个中级旅馆中，只有一张床的房间，两夫妇同住在里面委实嫌太挤了些。
-.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年09月17日 10:59 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/uimzxm315/djy/blob/master/gb/news2007.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/uimzxm315/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2007.htm">https://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://github.com/uimzxm315/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
